// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel expect to render 1`] = `
<div
  className="ais-Panel"
>
  <div
    className="ais-Panel-body ais-body"
  >
    <div>
      Hello content
    </div>
  </div>
</div>
`;

exports[`Panel expect to render with footer 1`] = `
<div
  className="ais-Panel"
>
  <div
    className="ais-Panel-body ais-body"
  >
    <div>
      Hello content
    </div>
  </div>
  <div
    className="ais-Panel-footer ais-footer"
  >
    <p>
      Footer
    </p>
  </div>
</div>
`;

exports[`Panel expect to render with header 1`] = `
<div
  className="ais-Panel"
>
  <div
    className="ais-Panel-header ais-header"
  >
    <p>
      Header
    </p>
  </div>
  <div
    className="ais-Panel-body ais-body"
  >
    <div>
      Hello content
    </div>
  </div>
</div>
`;

exports[`Panel expect to render without refinement 1`] = `
<div
  className="ais-Panel ais-Panel--noRefinement"
>
  <div
    className="ais-Panel-body ais-body"
  >
    <div>
      Hello content
    </div>
  </div>
</div>
`;
